Fix issue #804
Branch list no longer overflows out of the screen when there're too many branches locally.

--- a/styles/brackets-git.less
+++ b/styles/brackets-git.less
@@ -57,6 +57,7 @@
     display: block;
     max-width: none;
     z-index: 100;
+    overflow-y: auto;
     &:focus {
         outline: none;
     }
